files added to restart already running contianers, to get the status of running contianers and updated documentation

--- a/main.yml
+++ b/main.yml
@@ -5,4 +5,5 @@
   vars:
       update: true
   roles:
-     - deploy
+     - {name: marathon-test, tags: test-restart}
+     - {name: nginx, tags: nginx}
